--- a/templates/admin_login.html
+++ b/templates/admin_login.html
@@ -16,7 +16,7 @@
 </head>
 
 <body class="body">
-  <h2 class="card-title mb-4 text-info text-center" id="title" style="color:white;font-size:80px;text-align:center;font-family: cursive;" >English Learning Center</h2>
+  <h2 class="card-title mb-4 text-info text-center" id="title" style="color:white;font-size:80px;text-align:center;font-family: cursive;" >Administration for English Learning Center</h2>
   
   {% with messages = get_flashed_messages() %}
   {% if messages %}
@@ -42,7 +42,7 @@
     <form action="" method="post">
       
       <lottie-player src="https://assets4.lottiefiles.com/datafiles/XRVoUu3IX4sGWtiC3MPpFnJvZNq7lVWDCa8LSqgS/profile.json"  background="transparent"  speed="1"  style="justify-content: center;" loop  autoplay></lottie-player>
-      <input type="text" name="username" placeholder="&#xf007;  Student ID" />
+      <input type="text" name="username" placeholder="&#xf007;  Username" />
       <input type="password" name="password" id="password" placeholder="&#xf023;  password" />
       <i class="fas fa-eye" onclick="show()"></i> 
       <br>
