--- a/templates/quiz.html
+++ b/templates/quiz.html
@@ -121,9 +121,8 @@
                 <div class="card-body">
                     
                     <!-- card title -->
-                    <h2 class="card-title mb-4 text-info text-center" id="title">{{usr_name}}</h2>
                     
-                    <h2 class="card-title mb-4 text-info text-center" id="title">English Quiz Challenge</h2>
+                    <h2 class="card-title mb-4 text-info text-center" id="title">Hello {{usr_name}},This is English Quiz Challenge</h2>
             
                     <hr class="line">
                     
