--- a/static/css/login_style.css
+++ b/static/css/login_style.css
@@ -8,7 +8,7 @@
 
 .login-page {
   width: 360px;
-  padding: 8% 0 0;
+  padding: 0% 0 0;
   margin: auto;
 
 }
@@ -53,6 +53,7 @@ border-radius:30px;
   transition: all 0.3 ease;
   cursor: pointer;
   transition: all 0.2s;
+  
 
 
 }
@@ -128,4 +129,31 @@ body {
   font-family: "Roboto", sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;      
+}
+
+
+.alert {
+  padding: 20px;
+  background-color: #FFFFFF;
+  color: #8DC26F;
+  text-align: center;
+  font-size: 40px;
+  font-family:Arial, Helvetica, sans-serif;
+  font-weight: 800;
+  
+}
+
+.closebtn {
+  margin-left: 15px;
+  color: #EF3B3A;
+  font-weight: bold;
+  float: right;
+  font-size: 22px;
+  line-height: 20px;
+  cursor: pointer;
+  transition: 0.3s;
+}
+
+.closebtn:hover {
+  color: black;
 }
