update based on dr

--- a/templates/chatbot.html
+++ b/templates/chatbot.html
@@ -17,7 +17,6 @@
         <h2 class="card-title mb-4 text-info text-center" id="title" style="color:white;font-size:80px;text-align:center;font-family: cursive;" >Welcome to English Learning Center</h2>
        
         
-        
                                         
 <script src="https://cdn.jsdelivr.net/npm/rasa-webchat/lib/index.min.js"></script>
 <link rel="stylesheet" type="text/css" href="https://">
@@ -42,20 +41,20 @@
   },
     
     socketPath: "/socket.io/",
-    title: "Street Bot",
+    title: "English Bot",
     tooltipPayload: "/get_started",
     tooltip: true,    
     tooltipDelay: 500,
-    subtitle: "Powered by XYZ",
+    subtitle: "Powered by Group 3",
     connectingText: "Waiting for server...",
-    profileAvatar: "https://",
+    profileAvatar: "static/img/teacher.png",
     openLauncherImage: "https://",
 
     params: {"storage": "session"}, 
     
     mainColor: "#ffd600",
     userBackgroundColor: "#ffd600",
-    userTextColor: "#cde9ce",
+    userTextColor: "	#000000",
     showMessageDate: false,
     inputTextFieldHint: "Hi.Type your message here...",
     badge: " ",
@@ -78,6 +77,8 @@
 
 
 </script>
+<a href="http://127.0.0.1:5000/login" style="color: white;font-size: 50px;position: absolute;bottom: 80px;left: 16px;" >Login Here</a>
+<a href="http://127.0.0.1:5000/admin_login" style="color: white;font-size: 50px;position: absolute;bottom: 8px;left: 16px;" >Admin Login</a>
 
 </body>
 </html>
