--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -199,103 +199,27 @@
                                     </div>
                                 </div>
                             </div>
-                                <div class="col-md-6">
-                                    <div class="card">
-                                        <div class="content">
-                                            <div class="head">
-                                                <h5 class="mb-0">Adjectives and adverbs</h5>
-                                                <p class="text-muted">Number of Students vs Score</p>
-                                            </div>
-                                            <div class="canvas-wrapper">
-                                                <canvas class="chart" id="sales"></canvas>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-md-12">
-                            <div class="row">
-                            <div class="col-md-6">
-                                <div class="card">
-                                    <div class="content">
-                                        <div class="head">
-                                            <h5 class="mb-0">Articles a, an, the</h5>
-                                            <p class="text-muted">Number of Students vs Score</p>
-                                        </div>
-                                        <div class="canvas-wrapper">
-                                            <canvas class="chart" id="sales1"></canvas>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                                <div class="col-md-6">
-                                    <div class="card">
-                                        <div class="content">
-                                            <div class="head">
-                                                <h5 class="mb-0">Conditional sentences (if-clauses and main clauses)')</h5>
-                                                <p class="text-muted">Number of Students vs Score</p>
-                                            </div>
-                                            <div class="canvas-wrapper">
-                                                <canvas class="chart" id="sales2"></canvas>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-md-12">
-                            <div class="row">
-                            <div class="col-md-6">
-                                <div class="card">
-                                    <div class="content">
-                                        <div class="head">
-                                            <h5 class="mb-0">Endings of nouns and verbs</h5>
-                                            <p class="text-muted">Number of Students vs Score</p>
-                                        </div>
-                                        <div class="canvas-wrapper">
-                                            <canvas class="chart" id="sales3"></canvas>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                                <div class="col-md-6">
-                                    <div class="card">
-                                        <div class="content">
-                                            <div class="head">
-                                                <h5 class="mb-0">Plural, 's, one</h5>
-                                                <p class="text-muted">Number of Students vs Score</p>
-                                            </div>
-                                            <div class="canvas-wrapper">
-                                                <canvas class="chart" id="sales4"></canvas>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-md-12">
-                            <div class="row">
-                            <div class="col-md-6">
-                                <div class="card">
-                                    <div class="content">
-                                        <div class="head">
-                                            <h5 class="mb-0">Irregular and regular verbs</h5>
-                                            <p class="text-muted">Number of Students vs Score</p>
-                                        </div>
-                                        <div class="canvas-wrapper">
-                                            <canvas class="chart" id="sales5"></canvas>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
                                 
                             </div>
                         </div>
-                        <div class="col-md-3">
+                              <div class="col-md-3">
                            
                         </div>
 
+
+                        <div class="col-md-12">
+                            <div class="card">
+                                <div class="content">
+                                    <div class="head">
+                                        <h5 class="mb-0" style="font-size: 50px;">Average Score For Each Topic</h5>
+                                        <p class="text-muted">Average Score vs Topic</p>
+                                    </div>
+                                    <div class="canvas-wrapper">
+                                        <canvas class="chart" id="sales"></canvas>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
                     <div class="col-md-3">
                             
                     </div>
@@ -365,78 +289,14 @@
    
 
     
-    <script> localStorage.setItem("frequency0", '{{frequency1[0]}}'); </script>
-    <script> localStorage.setItem("frequency1", '{{frequency1[1]}}'); </script>
-    <script> localStorage.setItem("frequency2", '{{frequency1[2]}}'); </script>
-    <script> localStorage.setItem("frequency3", '{{frequency1[3]}}'); </script>
-    <script> localStorage.setItem("frequency4", '{{frequency1[4]}}'); </script>
-    <script> localStorage.setItem("frequency5", '{{frequency1[5]}}'); </script>
-    <script> localStorage.setItem("frequency6", '{{frequency1[6]}}'); </script>
-    <script> localStorage.setItem("frequency7", '{{frequency1[7]}}'); </script>
-    <script> localStorage.setItem("frequency8", '{{frequency1[8]}}'); </script>
-    <script> localStorage.setItem("frequency9", '{{frequency1[9]}}'); </script>
-    <script> localStorage.setItem("frequency10", '{{frequency1[10]}}'); </script>
+    <script> localStorage.setItem("avg1", '{{avg1}}'); </script>
+    <script> localStorage.setItem("avg2", '{{avg2}}'); </script>
+    <script> localStorage.setItem("avg3", '{{avg3}}'); </script>
+    <script> localStorage.setItem("avg4", '{{avg4}}'); </script>
+    <script> localStorage.setItem("avg5", '{{avg5}}'); </script>
+    <script> localStorage.setItem("avg6", '{{avg6}}'); </script>
     
-    <script> localStorage.setItem("frequency2_0", '{{frequency2[0]}}'); </script>
-    <script> localStorage.setItem("frequency2_1", '{{frequency2[1]}}'); </script>
-    <script> localStorage.setItem("frequency2_2", '{{frequency2[2]}}'); </script>
-    <script> localStorage.setItem("frequency2_3", '{{frequency2[3]}}'); </script>
-    <script> localStorage.setItem("frequency2_4", '{{frequency2[4]}}'); </script>
-    <script> localStorage.setItem("frequency2_5", '{{frequency2[5]}}'); </script>
-    <script> localStorage.setItem("frequency2_6", '{{frequency2[6]}}'); </script>
-    <script> localStorage.setItem("frequency2_7", '{{frequency2[7]}}'); </script>
-    <script> localStorage.setItem("frequency2_8", '{{frequency2[8]}}'); </script>
-    <script> localStorage.setItem("frequency2_9", '{{frequency2[9]}}'); </script>
-    <script> localStorage.setItem("frequency2_10", '{{frequency2[10]}}'); </script>
-   
-    <script> localStorage.setItem("frequency3_0", '{{frequency3[0]}}'); </script>
-    <script> localStorage.setItem("frequency3_1", '{{frequency3[1]}}'); </script>
-    <script> localStorage.setItem("frequency3_2", '{{frequency3[2]}}'); </script>
-    <script> localStorage.setItem("frequency3_3", '{{frequency3[3]}}'); </script>
-    <script> localStorage.setItem("frequency3_4", '{{frequency3[4]}}'); </script>
-    <script> localStorage.setItem("frequency3_5", '{{frequency3[5]}}'); </script>
-    <script> localStorage.setItem("frequency3_6", '{{frequency3[6]}}'); </script>
-    <script> localStorage.setItem("frequency3_7", '{{frequency3[7]}}'); </script>
-    <script> localStorage.setItem("frequency3_8", '{{frequency3[8]}}'); </script>
-    <script> localStorage.setItem("frequency3_9", '{{frequency3[9]}}'); </script>
-    <script> localStorage.setItem("frequency3_10", '{{frequency3[10]}}'); </script>
-
-    <script> localStorage.setItem("frequency4_0", '{{frequency4[0]}}'); </script>
-    <script> localStorage.setItem("frequency4_1", '{{frequency4[1]}}'); </script>
-    <script> localStorage.setItem("frequency4_2", '{{frequency4[2]}}'); </script>
-    <script> localStorage.setItem("frequency4_3", '{{frequency4[3]}}'); </script>
-    <script> localStorage.setItem("frequency4_4", '{{frequency4[4]}}'); </script>
-    <script> localStorage.setItem("frequency4_5", '{{frequency4[5]}}'); </script>
-    <script> localStorage.setItem("frequency4_6", '{{frequency4[6]}}'); </script>
-    <script> localStorage.setItem("frequency4_7", '{{frequency4[7]}}'); </script>
-    <script> localStorage.setItem("frequency4_8", '{{frequency4[8]}}'); </script>
-    <script> localStorage.setItem("frequency4_9", '{{frequency4[9]}}'); </script>
-    <script> localStorage.setItem("frequency4_10", '{{frequency4[10]}}'); </script>
-
-    <script> localStorage.setItem("frequency5_0", '{{frequency5[0]}}'); </script>
-    <script> localStorage.setItem("frequency5_1", '{{frequency5[1]}}'); </script>
-    <script> localStorage.setItem("frequency5_2", '{{frequency5[2]}}'); </script>
-    <script> localStorage.setItem("frequency5_3", '{{frequency5[3]}}'); </script>
-    <script> localStorage.setItem("frequency5_4", '{{frequency5[4]}}'); </script>
-    <script> localStorage.setItem("frequency5_5", '{{frequency5[5]}}'); </script>
-    <script> localStorage.setItem("frequency5_6", '{{frequency5[6]}}'); </script>
-    <script> localStorage.setItem("frequency5_7", '{{frequency5[7]}}'); </script>
-    <script> localStorage.setItem("frequency5_8", '{{frequency5[8]}}'); </script>
-    <script> localStorage.setItem("frequency5_9", '{{frequency5[9]}}'); </script>
-    <script> localStorage.setItem("frequency5_10", '{{frequency5[10]}}'); </script>
-
-    <script> localStorage.setItem("frequency6_0", '{{frequency6[0]}}'); </script>
-    <script> localStorage.setItem("frequency6_1", '{{frequency6[1]}}'); </script>
-    <script> localStorage.setItem("frequency6_2", '{{frequency6[2]}}'); </script>
-    <script> localStorage.setItem("frequency6_3", '{{frequency6[3]}}'); </script>
-    <script> localStorage.setItem("frequency6_4", '{{frequency6[4]}}'); </script>
-    <script> localStorage.setItem("frequency6_5", '{{frequency6[5]}}'); </script>
-    <script> localStorage.setItem("frequency6_6", '{{frequency6[6]}}'); </script>
-    <script> localStorage.setItem("frequency6_7", '{{frequency6[7]}}'); </script>
-    <script> localStorage.setItem("frequency6_8", '{{frequency6[8]}}'); </script>
-    <script> localStorage.setItem("frequency6_9", '{{frequency6[9]}}'); </script>
-    <script> localStorage.setItem("frequency6_10", '{{frequency6[10]}}'); </script>
-
+    
 
 </body>
 
