--- a/templates/resultByGroup.html
+++ b/templates/resultByGroup.html
@@ -8,6 +8,25 @@
 <html lang="en">
 
 <head>
+
+  <style>
+    table {
+      font-family: arial, sans-serif;
+      border-collapse: collapse;
+      width: 100%;
+    }
+    
+    td, th {
+      border: 1px solid #dddddd;
+      text-align: left;
+      padding: 8px;
+    }
+    
+    tr:nth-child(even) {
+      background-color: #dddddd;
+    }
+    </style>
+
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -77,37 +96,59 @@
             <div class="content">
                 <div class="container">
                     <div class="page-title">
-                        <h3>Results</h3>
-                        <a href="{{url_for('resultByGroup',dist=dist)}}" class="btn btn-success" style="position:absolute;top: 8px; right:16px; ">Go to Grouping Analysis</a>
-                                        
+                        <h1>Student Results Based On Group</h1>
                     </div>
                         <div class="col-md-12 col-lg-12">
                             <div class="card">
-                                <div class="card-header">Group Lists</div>
+                                <div class="card-header" style="font-size: 40px;">The difference after using Genetic Algorithm:{{dist}}
+                                    <p style="font-size: 30px;">Average Distance: {{overall_dist}}</p>
+                                    <p style="font-size: 30px;">Distance if group according to name: {{p_name}}</p>
+                                    <p style="font-size: 30px;">Distance if group according to id: {{p_id}}</p>
+                                </div>
+                                
                                 <div class="card-body">
                                     <p class="card-title"></p>
-                                    <table class="table table-hover" id="dataTables-example" width="100%">
-                                        <thead>
-                                            <tr>
+                                    {%for result_per_group in all_student_result_by_group%}  
+                                    
+                                    <div id="dataTables-example_wrapper" class="dataTables_wrapper dt-bootstrap5 no-footer"><div class="row"><div class="col-sm-12 col-md-6"></div><div class="col-sm-12 col-md-6"><div id="dataTables-example_filter" class="dataTables_filter"></div></div></div><div class="row"><div class="col-sm-12"><table class="table table-hover dataTable no-footer dtr-inline collapsed" id="dataTables-example" width="100%" role="grid" aria-describedby="dataTables-example_info" style="width: 100%;"></table>
+                                    <table class="table table-hover" id="dataTables-example" width="100%" >
+                                      <p style="font-size: 40px;">Group {{all_student_result_by_group.index(result_per_group)+1}}  </p>
+                                      <thead>   
+                                          <tr>
                                                 <th>ID</th>
                                                 <th>Name</th>
-                                                <th>Group Number</th>
+                                                <th>Adjectives and adverbs</th>
+                                                <th>Articles a, an, the</th>
+                                                <th>Conditional sentences (if-clauses and main clauses)</th>
+                                                <th>Endings of nouns and verbs</th>
+                                                <th>Plural, 's, one</th>
+                                                <th>Irregular and regular verbs</th>
                                             
                                             </tr>
                                         </thead>
                                         <tbody>
                                            
-                                            {%for name in student_name%}  
+                                            
+                                            {%for stu in result_per_group%}  
                                             <tr> 
-                                            <td>{{student_name.index(name) +1}} </td>   
-                                            <td>{{name[0]}}</td>    
-                                            <td>{{group_list[student_name.index(name)]+1}}</td>      
+                                            <td>{{stu[0]}} </td>   
+                                            <td>{{stu[1]}} </td>    
+                                            <td>{{stu[2]}} </td>  
+                                            <td>{{stu[3]}} </td>  
+                                            <td>{{stu[4]}} </td>  
+                                            <td>{{stu[5]}} </td>  
+                                            <td>{{stu[6]}} </td> 
+                                            <td>{{stu[7]}} </td> 
+
                                             </tr>    
                                             {%endfor%}
+                                            
 
                                             
                                         </tbody>
                                     </table>
+                                    {%endfor%}
+                                    </div>
                                 </div>
                             </div>
                         </div>
@@ -121,7 +162,6 @@
     <script src="static/vendor/datatables/datatables.min.js"></script>
     <script src="static/js/initiate-datatables.js"></script>
     <script src="static/js/script.js"></script>
-
 </body>
 
 </html>
