--- a/templates/grouping.html
+++ b/templates/grouping.html
@@ -77,7 +77,7 @@
             <div class="content">
                 <div class="container">
                     <div class="page-title">
-                        <h3>Results</h3>
+                        <h3>Grouping Results</h3>
                         <a href="{{url_for('resultByGroup',dist=dist)}}" class="btn btn-success" style="position:absolute;top: 8px; right:16px; ">Go to Grouping Analysis</a>
                                         
                     </div>
