--- a/templates/login.html
+++ b/templates/login.html
@@ -61,6 +61,7 @@
 </div>
 
 	 
+<a href="http://127.0.0.1:5000/chatbot" style="color: white;font-size: 50px;position: absolute;bottom: 8px;left: 16px;" >Go Back</a>
 	
 
 		
