--- a/templates/progress.html
+++ b/templates/progress.html
@@ -61,7 +61,7 @@
                             <div class="dropdown-menu dropdown-menu-end nav-link-menu">
                                 <ul class="nav-list">
                                     
-                                    <li><a href="http://127.0.0.1:5000/login" class="dropdown-item"><i class="fas fa-sign-out-alt"></i> Logout</a></li>
+                                    <li><a href="http://127.0.0.1:5000/logout" class="dropdown-item"><i class="fas fa-sign-out-alt"></i> Logout</a></li>
                                 </ul>
                             </div>
                         </div>
